# aegis

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
agent/: README.md  config.secure.yaml  config.yaml  requirements.txt
crypto/: README.md  pyproject.toml
crypto/aegis_crypto/: __init__.py  aesgcm.py  canonical.py  jwt_tokens.py  kex.py  keys.py  passwords.py  pfs.py  signing.py  tlspin.py  totp.py  tpm.py  weak_crypto.py
docs/: DEMO.md  threat-model.md
lab/: README.md  docker-compose.yml
ml/: Dockerfile  README.md  requirements.txt  service.py
scanner/: README.md
scripts/: adversarial_test.py  arp_spoof_sim.py  demo.ps1  fetch_datasets.py  flood_lab.py  gen_certs.py  honeypot.py  init_postgres.py  killchain_demo.py  ml_demo.py  mtls_selftest.py  provision_agent.py  prune.py  rotate_keys.py  secure_demo.py  seed_demo.py  simulate.py  start_all.ps1  tamper_demo.py  tpm_replay_attack.py  verify_certs.py
server/: Dockerfile  README.md  alembic.ini  requirements.txt
tests/: conftest.py  test_auth.py  test_auth_login.py  test_bruteforce.py  test_collector.py  test_crypto.py  test_crypto_m4.py  test_hardening.py  test_integrity.py  test_jwt.py  test_m6.py  test_ml.py  test_network_detect.py  test_phase_b.py  test_phase_c.py  test_rules.py  test_scanner.py  test_secure_ingest.py  test_tpm_attest.py  test_weak_crypto.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+81 files in other folders)
