[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-crypto"
version = "0.1.0"
description = "Aegis paylaşılan kriptografi yardımcıları (Ed25519 imza, AES-GCM)"
requires-python = ">=3.10"
dependencies = ["cryptography>=42"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_crypto*"]
